horizontal scrolling fixed

--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,5 +1,4 @@
 .footer {
-    width: 100vw;
     background: -o-linear-gradient(top, #0A2850 0%, #071931 100%);
     background: -webkit-gradient(linear, left top, left bottom, from(#0A2850), to(#071931));
     background: linear-gradient(180deg, #0A2850 0%, #071931 100%);
