--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,61 +1,94 @@
 .header {
-    height: 100vh;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
+    flex-direction: column;
+    /* -webkit-box-pack: justify;
         -ms-flex-pack: justify;
-            justify-content: space-between;
+            justify-content: space-between; */
     background-color: #FFFFFF;
     background-image: url('../images/background_header.svg');
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size:cover;
+    height: 100%;
+    width: 100%;
 }
 
-.header__left-side-wrapper {
+.nav {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column; 
-}
-
-.header__text-column {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
-    height: 100%;
+    -webkit-box-align: normal;
+        -ms-flex-align: normal;
+            align-items: normal;
+    margin-top: 30px;
 }
 
-.header__description-column {
+.nav__links {
+    -webkit-transition: color 1s linear 2s;
+    -o-transition: color 1s linear 2s;
+    transition: color 1s linear 2s;
+    text-decoration: none;
+    list-style-type: none;
+    padding: unset;
+    margin: unset;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    row-gap: 20px;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: normal;
+        -ms-flex-align: normal;
+            align-items: normal;
+    -webkit-column-gap: 20px;
+       -moz-column-gap: 20px;
+            column-gap: 20px;
+    margin-right: 80px;
+}   
+
+.nav__link {
+    text-decoration: none;
+    -webkit-transition: color 0.35s linear 0.1s;
+    -o-transition: color 0.35s linear 0.1s;
+    transition: color 0.35s linear 0.1s;
+    font-family: 'Inter', Arial, sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 20px;
+}
+
+.nav__link:hover {
+    color: #2F80ED;
 }
 
 .header__logo {
     height: 142px;
     width: 125px;
-    margin-top: 30px;
-    margin-left: 30px;
-    margin-bottom: 80px;
+    position: relative;
+    margin-left: 80px;
+}
+
+.header__text-column {
+    height: 100%;
+}
+
+.header__description-column {
+    /* display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column; */
+    row-gap: 20px;
 }
 
 .header__title {
+    margin-top: 80px;
     max-width: 729px;
     font-family: 'Inter', Arial, sans-serif;
     font-weight: 500;
@@ -89,32 +122,13 @@
 }
 
 .header__paragraph-column {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
-    margin-bottom: 40px;
-}
-
-.header-description-column {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-
+    position: absolute;
+    bottom: 40px;
 }
 
 .header__paragraph {
-    display: inline;
+    margin: unset;
+    padding: unset;
     font-family: 'Inter', Arial, sans-serif;
     font-weight: 500;
     font-size: 16px;
@@ -127,94 +141,9 @@
     margin-bottom: 40px;
 }
 
-/* right side of header page */
-
-.header__right-side-wrapper {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-}
-
-.header__nav-image-wrapper {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    background-color: yellow;
-}
-
-.nav {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    -webkit-box-align: normal;
-        -ms-flex-align: normal;
-            align-items: normal;
-    margin-top: 30px;
-    width: -webkit-fit-content;
-    width: -moz-fit-content;
-    width: fit-content;
-    margin-right: 80px;
-    margin-left: auto;
-}
-
-.nav__links {
-    -webkit-transition: color 1s linear 2s;
-    -o-transition: color 1s linear 2s;
-    transition: color 1s linear 2s;
-    text-decoration: none;
-    list-style-type: none;
-    padding: unset;
-    margin: unset;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    -webkit-box-align: normal;
-        -ms-flex-align: normal;
-            align-items: normal;
-    -webkit-column-gap: 20px;
-       -moz-column-gap: 20px;
-            column-gap: 20px;
-}   
-
-.nav__link {
-    text-decoration: none;
-    -webkit-transition: color 0.35s linear 0.1s;
-    -o-transition: color 0.35s linear 0.1s;
-    transition: color 0.35s linear 0.1s;
-    font-family: 'Inter', Arial, sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 20px;
-}
-
-.nav__link:hover {
-    color: #2F80ED;
-}
-
 .header__image {
     width: 646px;
     height: 568px;
-    /* margin-right: 5px; */
     position: absolute;
     top: 124px;
     right: 5px;
