--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -1,5 +1,4 @@
 .menu {
-    width: 100vw;
     background-color: #0a2750;
     background-image: url('../images/background_menu.svg');
     background-repeat: no-repeat;
